--- a/bgremoverapp/templates/change_background.html
+++ b/bgremoverapp/templates/change_background.html
@@ -1,4 +1,5 @@
-<h2>Result Image</h2>
-<img src="{{ result_image_path }}" alt="Result Image" width="500" height="500" style="border: 1px solid black;">
-<img src="media\result.png" alt="Result Image" width="500" height="500" style="border: 1px solid black;">
-<p>Image path: {{ result_image_path }}</p>
+
+
+
+  <h1>Result</h1>
+  <img src="{{ result_image_path }}" alt="Result Image">
